--- a/day9/shopping-cart/package.json
+++ b/day9/shopping-cart/package.json
@@ -13,10 +13,13 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
